fix(show-planning): degrade MUST_BOOK to warning, hard-block only on STIPULATION_REQUIRED
Previously all card validation failures (including rivalries simply not on
the card) threw an IllegalStateException, making it impossible to approve
any show when the roster was large enough that 7 AI-proposed segments
couldn't cover 150+ feuds with heat >= 10.

- Introduce CardValidationResult separating errors (hard block) from
  warnings (advisory — booker must acknowledge but can proceed)
- MUST_BOOK violations (rivalry not on card, heat >= 10) → warning
- STIPULATION_REQUIRED violations (rivalry on card, heat >= 30, no rules)
  → hard error, still blocks approval
- Add convenience validateCard(segments) overload that resolves rivalries
  from the database so callers don't need to pass the rivalry list
- ShowPlanningView pre-validates before calling approveSegments():
  - Hard errors → modal dialog listing each violation with fix instructions
  - Warnings only → ConfirmDialog showing unbooked rivalries, booker can
    acknowledge and approve anyway
- Update unit tests (ShowPlanningServiceTest, ShowPlanningViewTest) and
  IT tests (ShowPlanningServiceIT) to cover the new semantics